--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,7 +43,7 @@
         </activity>
 
         <activity android:name=".ui.activities.LoginActivity" android:theme="@style/AppTheme.Dark"/>
-        <activity android:name=".ui.activities.ChatRoomActivity" android:theme="@style/AppTheme.Dark"/>
+        <activity android:name=".ui.activities.ChatroomActivity" android:theme="@style/AppTheme.Dark"/>
 
     </application>
 
