--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,13 +42,15 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".ui.activities.LoginActivity" android:theme="@style/AppTheme.Dark"/>
+        <activity android:name=".ui.activities.LoginActivity" android:parentActivityName=".ui.activities.MainActivity" android:theme="@style/AppTheme.Dark"/>
         <activity android:name=".ui.activities.ChatroomActivity" android:theme="@style/AppTheme.Dark"/>
+        <activity android:name=".ui.activities.CameraActivity" android:parentActivityName=".ui.activities.ChatroomActivity"/>
 
     </application>
 
     <!-- Permissions -->
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-feature android:name="android.hardware.camera" />
 
 </manifest>
