--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,8 +22,24 @@
         <activity android:name=".views.activities.MainActivity" android:theme="@style/AppTheme.Dark">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+
+            <intent-filter android:label="@string/intent_filter_deep_link_http">
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <data android:scheme="http"
+                    android:host="www.vikpo.com"
+                    android:pathPrefix="/chatroom"/>
+            </intent-filter>
+
+            <intent-filter android:label="@string/intent_filter_deep_link_example">
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <data android:scheme="example"
+                    android:host="vikpo"/>
             </intent-filter>
         </activity>
 
@@ -43,7 +59,8 @@
         </activity>
 
         <activity android:name=".views.activities.LoginActivity" android:parentActivityName=".views.activities.MainActivity" android:theme="@style/AppTheme.Dark"/>
-        <activity android:name=".views.activities.ChatroomActivity" android:theme="@style/AppTheme.Dark"/>
+        <activity android:name=".views.activities.ChatroomActivity" android:theme="@style/AppTheme.Dark">
+        </activity>
         <activity android:name=".views.activities.CameraActivity" android:parentActivityName=".views.activities.ChatroomActivity"/>
 
             <service
